# mod_auth_gssapi

./: .gitignore  .travis.sh  .travis.yml  AUTHORS  COPYING  Makefile.am  README  configure.ac  version.m4
.github/workflows/: ci.yml
ci/: ci.sh  run_dockerized.sh
contrib/: 80-httpd.conf  mod_auth_gssapi.spec  mod_auth_gssapi.spec.in  release.sh  session_generator.py  sweeper.py
example/: 10-auth_gssapi.conf
src/: Makefile.am  crypto.c  crypto.h  environ.c  environ.h  lex.l  mag_parse.h  mod_auth_gssapi.c  mod_auth_gssapi.h  parser.y  sessions.c  sessions.h  util.c
src/asn1c/: GSSSessionData.c  GSSSessionData.h  Makefile.am  Uint32.c  Uint32.h  ber_tlv_length.c  session.asn1
tests/: 401.html  Makefile.am  httpd.conf  index.html  localname.html  magtests.py  mech.html  natest.c  natest.sh  t_bad_acceptor_name.py  t_basic_k5.py  t_basic_k5_fail_second.py  t_basic_k5_two_users.py  t_basic_proxy.py  t_basic_timeout.py  t_file_check.py  t_hostname_acceptor.py  t_localname.py  t_mech_name.py  t_nonego.py  t_required_name_attr.py  t_spnego.py  t_spnego_negotiate_once.py  t_spnego_no_auth.py  t_spnego_proxy.py  t_spnego_rewrite.py
