EXTRA_DIST = \
	401.html \
	httpd.conf \
	index.html \
	magtests.py \
	t_bad_acceptor_name.py \
	t_basic_k5_fail_second.py \
	t_basic_k5.py \
	t_basic_k5_two_users.py \
	t_basic_proxy.py \
	t_spnego_negotiate_once.py \
	t_spnego_no_auth.py \
	t_spnego_proxy.py \
	t_spnego.py \
	t_spnego_rewrite.py \
	$(NULL)
