AM_CPPFLAGS = -I ../src

EXTRA_DIST = \
	401.html \
	httpd.conf \
	index.html \
	localname.html \
	magtests.py \
	t_bad_acceptor_name.py \
	t_basic_k5_fail_second.py \
	t_basic_k5.py \
	t_basic_k5_two_users.py \
	t_basic_proxy.py \
	t_localname.py \
	t_hostname_acceptor.py \
	t_nonego.py \
	t_required_name_attr.py \
	t_spnego_negotiate_once.py \
	t_spnego_no_auth.py \
	t_spnego_proxy.py \
	t_spnego.py \
	t_spnego_rewrite.py \
	natest.c \
	natest.sh \
	$(NULL)

# BUILT_SOURCES = ../src/parser.h
# AM_YFLAGS = -d
# noinst_PROGRAMS = natest
# natest_SOURCES = natest.c ../src/lex.l ../src/parser.y
# natest_CFLAGS = $(MAG_CFLAGS)
# natest_LDFLAGS = $(MAG_LIBS) $(LEXLIB)
